# valence

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .venv  AUDIT-REPORT.md  AUDIT-STATUS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE.md  Dockerfile.test  MIGRATION_SUMMARY.md  README.md  RELEASING.md  V02_TEST_COVERAGE_REPORT.md  WORKFLOW_AUTO.md  codecov.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  schema.sql
.claude/rules/: architecture.md  testing.md
.github/workflows/: ci.yml  deploy.yml  integration.yml  release.yml
docs/: ECONOMICS.md  FEATURE-SPEC.md  FEDERATION_PROTOCOL.md  FEDERATION_SCHEMA.md  GDPR.md  MCP_INTEGRATION.md  MIGRATIONS.md  PRIVACY_GUARANTEES.md  RELEASE-CHECKLIST.md  SUBAGENT-WORKFLOW.md  TRUST_MODEL.md  VERSIONING.md  VISION.md  cli-reference.md  deployment.md  getting-started.md  openapi.yaml  testing.md  v2-refactor-spec.md
docs/audits/: CODE-QUALITY-AUDIT-2026-02-04.md  CODE-QUALITY-AUDIT-2026-02-05.md  FEDERATION-AUDIT-2026-02-04.md  PRIVACY-AUDIT-2026-02-04.md  PRIVACY-AUDIT-2026-02-05.md  SECURITY-AUDIT-2026-02-04.md
docs/consensus/: README.md  VRF_SECURITY.md
docs/design/: active-curation-vision.md  architecture.md  domain-inference.md  mcp-tools.md  plugin.md  schema.md  semantic-compression.md
docs/federation/: AGGREGATION.md  DEPLOYMENT.md  OPERATIONS.md
examples/: 01_hello_belief.py  02_trust_graph.py  03_federation.py  demo.py
hooks/: pre-push
infra/: .env.example  .gitignore  README.md  deploy.sh  inventory.yml  site.yml
infra/scripts/: validate-env.sh
memory/: 2026-02-26.md  2026-02-27.md  audit-quality-v02.md  audit-security-v02.md
migrations/: 001-belief-schema.sql  001_initial_schema.py  002-qa-fixes.sql  002_source_sections.sql  002_vector_384.sql  004-peer-sync.sql  004_sessions.sql  005_compilation_queue.sql  006_epistemic_types.sql  007-federation.sql  007_pipeline_status.sql  008-privacy-schema.sql  008_mutation_queue_source_id.sql  011-trust-graph.sql  016_exchange_compaction.sql  019_sharing_groups_receive.sql  021_drop_dead_tables.sql  024_degraded_columns.py  025_v2_column_renames.py  025_v2_column_renames.sql
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  session-end.py  session-start.py
scripts/: backfill_openai_embeddings.py  ingest_workspace.py  migrate_embeddings_to_openai.py  reembed_all.py  reset_db.sh  seed.py  smoke_test_v2.py  test-db.sh  test_hybrid_retrieval.py
spec/: ADOPTION.md  BUSINESS-MODEL.md  COHERENCE-REVIEW.md  CONTEXT-WINDOW.md  INFORMATION-ECONOMY.md  MANIFESTO.md  README.md  SOCIAL-LAYER.md  STATUS.md
spec/compliance/: COMPLIANCE.md  federation-agreement-template.md
spec/security/: THREAT-MODEL.md
src/valence/: __init__.py  mcp_server.py  mcp_server.py.backup
tests/: __init__.py  conftest.py  test_federation_mvp.py  test_mcp_server.py
tests/agents/: test_matrix_bot.py
tests/cli/: test_articles_cmd.py  test_attestations_cli.py  test_auth.py  test_cli.py  test_config.py  test_config_cmd.py  test_config_right_sizing.py  test_conflicts_cmd.py  test_embeddings_cli.py  test_federation.py  test_http_client.py  test_maintenance_cli.py  test_maintenance_cmd.py  test_maintenance_schedule_cli.py  test_memory.py  test_migration_cli.py  test_new_commands.py  test_session_cli.py  test_sources_cmd.py
tests/compliance/: __init__.py  test_deletion.py  test_pii_scanner.py
tests/consensus/: test_anti_gaming.py  test_selection.py  test_vrf.py
tests/core/: test_articles.py  test_attestation_service.py  test_autocompile_tuning.py  test_backends.py  test_compilation.py  test_compilation_dedup.py  test_confidence.py  test_config.py  test_contention.py  test_contention_pipeline.py  test_corroboration.py  test_crypto_service.py  test_curation.py  test_db.py  test_db_pool_hardening.py  test_db_security.py  test_deferred_embeddings.py  test_dimension_registry.py  test_embedding_interop.py  test_embeddings.py  test_exceptions.py  test_exchange_compaction.py  test_federation_embedding.py  test_forgetting.py  test_group_sharing.py  test_health.py  test_identity_service.py  test_inference.py  test_inference_schemas.py  test_ingest_pipeline.py  test_logging.py  test_lru_cache.py  test_maintenance.py  test_mcp_base.py  test_migrations.py  test_models.py  test_provenance.py  test_ranking.py  test_ranking_improvements.py  test_receive_service.py  (+17 more)
tests/crypto/: __init__.py  test_mls.py  test_pre.py
tests/embeddings/: __init__.py  test_local_provider.py  test_provider.py  test_registry.py  test_service.py
tests/federation/: __init__.py  test_aggregation.py  test_challenge_store.py  test_consent.py  test_discovery.py  test_domain_verification_trust.py  test_gateway.py  test_gateway_key_rotation.py  test_groups.py  test_identity.py  test_nonces.py  test_peer_exchange.py  test_peer_sync.py  test_privacy.py  test_privacy_budget_store.py  test_protocol.py  test_require_auth.py  test_ring_coefficient.py  test_sync.py  test_sync_auth.py  test_tls_validation.py  test_trust.py  test_trust_concentration.py  test_trust_propagation.py  test_trust_registry.py  test_verification.py
tests/hooks/: test_session_end.py
tests/identity/: __init__.py  test_did_manager.py  test_identity_cli.py  test_multi_did.py
tests/integration/: __init__.py  conftest.py  test_belief_lifecycle.py  test_deployment.py  test_e2e_auto_capture.py  test_federation_sync.py  test_live_nodes.py  test_trust_propagation.py  test_v2_integration.py
tests/mcp/: test_admin_handlers.py  test_articles_handlers.py  test_contention_handlers.py  test_entities_handlers.py  test_mcp_startup.py  test_memory_handlers.py  test_provenance_handlers.py  test_server.py  test_session_handlers.py  test_sources_handlers.py  test_sources_handlers.py.bak  test_substrate_server.py  test_unified_server.py  test_utils.py  test_vkb_server.py
tests/network/: __init__.py  test_ack.py  test_back_pressure.py  test_circuits.py  test_connection_manager.py  test_cover_traffic.py  test_eclipse_mitigation.py  test_health_gossip.py  test_health_monitor.py  test_message_handler.py  (+11 more)
(+451 files in other folders)
