[project]
name = "ourochronos-valence"
version = "2.0.0"
description = "Personal knowledge substrate for AI agents - beliefs, conversations, patterns"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Chris Jacobs"}
]
keywords = [
    "knowledge-base",
    "ai",
    "claude",
    "mcp",
    "agent",
    "memory",
    "beliefs",
    "substrate",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

dependencies = [
    "mcp>=1.0,<2",
    "openai>=1.0,<3",
    "psycopg2-binary>=2.9,<3",
    "asyncpg>=0.29.0,<1",
    "numpy>=1.24,<3",
    "pgvector>=0.2,<1",
    "sentence-transformers>=2.2.0,<6",
    "starlette>=0.40.0,<1",
    "uvicorn[standard]>=0.30.0,<1",
    "pydantic-settings>=2.0.0,<3",
    "PyJWT>=2.11.0,<3",
    "PyYAML>=6.0,<7",
    "httpx>=0.27.0,<1",
    "aiohttp>=3.9.0,<4",
    "dnspython>=2.4.0,<3",
    "cryptography>=42.0,<47",
]

[project.optional-dependencies]
all = []
redis = [
    "redis>=4.5",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-timeout>=2.2",
    "ruff>=0.1",
    "mypy>=1.0",
    "black>=24.0",
    "types-PyYAML>=6.0",
    "requests>=2.31",
]
test = [
    "ourochronos-valence[dev]",
    "libp2p>=0.5.0",
    "trio>=0.22",
]

[project.scripts]
valence = "valence.cli:main"
valence-mcp = "valence.mcp:run"  # unified MCP server (recommended)
valence-server = "valence.server.app:run"
valence-token = "valence.server.cli:main"

[project.urls]
Homepage = "https://github.com/ourochronos/valence"
Repository = "https://github.com/ourochronos/valence"
Documentation = "https://github.com/ourochronos/valence/blob/main/docs/getting-started.md"
Issues = "https://github.com/ourochronos/valence/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/valence"]

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # line-too-long - allow long SQL strings and descriptions
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (requires PostgreSQL database)",
    "requires_postgres: Tests that require a real PostgreSQL database",
    "slow: Tests that take a long time to run",
]
addopts = "-q --tb=line --no-header"
# For verbose local debugging: pytest -v --tb=short

[tool.coverage.run]
source = ["src/valence"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "psycopg2",
    "psycopg2.*",
    "asyncpg",
    "asyncpg.*",
]
ignore_missing_imports = true

